--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   ],
   "dependencies": {
     "ar-drone": "0.0.5",
-    "opencv": "~0.1.0"
+    "opencv": "~0.1.0",
+    "node-pid-controller": "0.0.x",
+    "async": "0.2.9"
   },
   "author": "Laurent Eschenauer <laurent@eschenauer.be>",
   "contributors": [
