add Philmod as contributor

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "author": "Laurent Eschenauer <laurent@eschenauer.be>",
   "contributors": [
     {
-      "name": "Paul Hayes"
+      "name": "Paul Hayes",
+      "name": "Philippe Modard <philippe.modard@gmail.com>"
     }
   ],
   "license": "MIT"
